--- a/MOA_River_Comparison.ipynb
+++ b/MOA_River_Comparison.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "be91302b-3d48-449a-9eeb-4444d86d8e7c",
+   "id": "f6c3fc32-efa6-4238-a6f6-7e84aed4973d",
    "metadata": {},
    "outputs": [
     {
@@ -18,383 +18,16 @@
     }
    ],
    "source": [
-    "import prepare_jpype\n",
-    "from test_train_loop import test_train_loop_MOA, test_train_loop_RIVER"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "60bb1d0d-66e3-45f1-b7cc-15ae08cbe81a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Datasets paths\n",
-    "csv_elec_tiny_path = '/Users/gomeshe/Desktop/data/electricity_tiny.csv'\n",
-    "arff_elec_tiny_path = '/Users/gomeshe/Desktop/data/electricity_tiny.arff'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "517c68a0-3951-4202-b3eb-0b648f0e33ba",
-   "metadata": {},
-   "source": [
-    "## Basic classification examples\n",
+    "from prepare_jpype import start_jpype\n",
+    "start_jpype()\n",
     "\n",
-    "* Using the ```test_train_loop_MOA``` for MOA and ```test_train_loop_RIVER``` helper functions (see module test_train_loop)\n",
-    "\n",
-    "* These are just examples on how to run several algorithms, it is kind of repetitive, but might be useful to have an example. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c7835c1a-35d0-42bb-9a4d-d990773cc0f6",
-   "metadata": {},
-   "source": [
-    "## Examples using River"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "3d366b78-feeb-497a-8a05-578437600343",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "# Read the file to a dataframe, used by all examples\n",
-    "river_elec_tiny = pd.read_csv(csv_elec_tiny_path).to_numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "d56e186b-a288-4953-9d95-74f25cfeff5e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ARFClassifier, 0.8550, 0.3370, 0.3369\n"
-     ]
-    }
-   ],
-   "source": [
-    "from river.forest import ARFClassifier\n",
-    "\n",
-    "river_arf5 = ARFClassifier(\n",
-    "    n_models=5,\n",
-    "    max_features=0.60\n",
-    ")\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(river_arf5, river_elec_tiny)\n",
-    "print(f\"{river_arf5}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "0d9c9d33-52b2-4442-a577-396de0bf31e7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HoeffdingTreeClassifier, 0.8230, 0.0644, 0.0600\n"
-     ]
-    }
-   ],
-   "source": [
-    "from river.tree import HoeffdingTreeClassifier\n",
-    "\n",
-    "river_ht = HoeffdingTreeClassifier()\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(river_ht, river_elec_tiny)\n",
-    "print(f\"{river_ht}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "84f29ddd-2e97-4c31-945a-1129e8ca1833",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "KNNClassifier, 0.7570, 2.0531, 2.0439\n"
-     ]
-    }
-   ],
-   "source": [
-    "from river.neighbors import KNNClassifier\n",
-    "\n",
-    "river_knn = KNNClassifier()\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(river_knn, river_elec_tiny)\n",
-    "print(f\"{river_knn}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "47e22fbe-c42a-4cf0-9f40-0c408fc8185b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GaussianNB, 0.8490, 0.0285, 0.0285\n"
-     ]
-    }
-   ],
-   "source": [
-    "from river.naive_bayes import GaussianNB\n",
-    "\n",
-    "river_gnb = GaussianNB()\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(river_gnb, river_elec_tiny)\n",
-    "print(f\"{river_gnb}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "7f59847d-b33b-431e-8ddb-ee0a3a5375b7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SRPClassifier(HoeffdingTreeClassifier), 0.8830, 0.7703, 0.7701\n"
-     ]
-    }
-   ],
-   "source": [
-    "from river.ensemble.streaming_random_patches import SRPClassifier\n",
-    "\n",
-    "river_srp = SRPClassifier(\n",
-    "    n_models=5,\n",
-    "    subspace_size=0.6\n",
-    ")\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(river_srp, river_elec_tiny)\n",
-    "print(f\"{river_srp}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "e25a96f4-7612-445b-b210-838d474fba2d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ExtremelyFastDecisionTreeClassifier, 0.8230, 0.2326, 0.2334\n"
-     ]
-    }
-   ],
-   "source": [
-    "from river.tree import ExtremelyFastDecisionTreeClassifier\n",
-    "\n",
-    "river_EFDT = ExtremelyFastDecisionTreeClassifier()\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(river_EFDT, river_elec_tiny)\n",
-    "print(f\"{river_EFDT}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "15079978-5afa-4876-a0cc-ab0fcf3ab6ce",
-   "metadata": {},
-   "source": [
-    "## Examples using MOA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "389f00c6-22e0-4ed6-a73a-7c18d01c3fb8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from moa.streams import ArffFileStream\n",
-    "\n",
-    "elec_tiny_arff = ArffFileStream(arff_elec_tiny_path, -1)\n",
-    "elec_tiny_arff.prepareForUse()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "9cf0778d-942f-44e2-bd79-e754e6c7735e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "moa.classifiers.meta.AdaptiveRandomForest, 89.4500, 0.5203, 1.0742\n"
-     ]
-    }
-   ],
-   "source": [
-    "from moa.classifiers.meta import AdaptiveRandomForest\n",
-    "\n",
-    "arf10 = AdaptiveRandomForest()\n",
-    "arf10.getOptions().setViaCLIString(\"-s 5\")\n",
-    "arf10.prepareForUse()\n",
-    "\n",
-    "elec_tiny_arff.restart()\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_MOA(elec_tiny_arff, arf10, maxInstances=2000, sampleFrequency=2000)\n",
-    "print(f\"{arf10.getClass().getName()}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "1270cf7b-3bf1-4092-9498-f5e6f91aea64",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "moa.classifiers.trees.HoeffdingTree, 86.0500, 0.0275, 0.0592\n"
-     ]
-    }
-   ],
-   "source": [
-    "from moa.classifiers.trees import HoeffdingTree\n",
-    "\n",
-    "ht_moa = HoeffdingTree()\n",
-    "ht_moa.prepareForUse()\n",
-    "\n",
-    "elec_tiny_arff.restart()\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_MOA(elec_tiny_arff, ht_moa, maxInstances=2000, sampleFrequency=2000)\n",
-    "print(f\"{ht_moa.getClass().getName()}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "c8ac0b21-a3bf-488b-b5cb-ce6289298ee1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "moa.classifiers.lazy.kNN, 84.2167, 0.2595, 0.5288\n"
-     ]
-    }
-   ],
-   "source": [
-    "from moa.classifiers.lazy import kNN\n",
-    "\n",
-    "knn_moa = kNN()\n",
-    "knn_moa.prepareForUse()\n",
-    "\n",
-    "elec_tiny_arff.restart()\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_MOA(elec_tiny_arff, knn_moa, maxInstances=2000, sampleFrequency=2000)\n",
-    "print(f\"{knn_moa.getClass().getName()}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "15ccd3c4-f0d6-479d-b773-df230cfdf2aa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "moa.classifiers.trees.EFDT, 83.8375, 0.0253, 0.0508\n"
-     ]
-    }
-   ],
-   "source": [
-    "from moa.classifiers.trees import EFDT\n",
-    "\n",
-    "EFDT_moa = EFDT()\n",
-    "EFDT_moa.prepareForUse()\n",
-    "\n",
-    "elec_tiny_arff.restart()\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_MOA(elec_tiny_arff, EFDT_moa, maxInstances=2000, sampleFrequency=2000)\n",
-    "print(f\"{EFDT_moa.getClass().getName()}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "e264098a-588a-456b-ae11-dced5b5ceb7f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "moa.classifiers.bayes.NaiveBayes, 83.8700, 0.0193, 0.0384\n"
-     ]
-    }
-   ],
-   "source": [
-    "from moa.classifiers.bayes import NaiveBayes\n",
-    "\n",
-    "NaiveBayes_moa = NaiveBayes()\n",
-    "NaiveBayes_moa.prepareForUse()\n",
-    "\n",
-    "elec_tiny_arff.restart()\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_MOA(elec_tiny_arff, NaiveBayes_moa, maxInstances=2000, sampleFrequency=2000)\n",
-    "print(f\"{NaiveBayes_moa.getClass().getName()}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "6fa952e8-08e3-4e6f-88ad-dac1aaea94ef",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "moa.classifiers.meta.StreamingRandomPatches, 84.9417, 0.5141, 1.0244\n"
-     ]
-    }
-   ],
-   "source": [
-    "from moa.classifiers.meta import StreamingRandomPatches\n",
-    "\n",
-    "SRP_moa = StreamingRandomPatches()\n",
-    "SRP_moa.getOptions().setViaCLIString(\"-s 10\")\n",
-    "SRP_moa.prepareForUse()\n",
-    "\n",
-    "elec_tiny_arff.restart()\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_MOA(elec_tiny_arff, SRP_moa, maxInstances=2000, sampleFrequency=2000)\n",
-    "print(f\"{SRP_moa.getClass().getName()}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
+    "from evaluation import test_train_loop_MOA, test_train_loop_RIVER"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "c0886e57-bcd3-46be-9d56-d04888831add",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Experiments MOA vs River using ARF\n",
     "\n",
@@ -415,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "id": "94bafd08-94cd-4577-b9b6-e8f39d24ae97",
    "metadata": {},
    "outputs": [
@@ -423,66 +56,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 50.8 s, sys: 367 ms, total: 51.1 s\n",
-      "Wall time: 50.2 s\n"
+      "moa.classifiers.meta.AdaptiveRandomForest, 83.5270, 45.8435, 46.8418\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(83.88189655172414,\n",
-       " 50.219346046447754,\n",
-       " 51.13412499999999,\n",
-       "     classified instances  classifications correct (percent)  \\\n",
-       " 0                17000.0                          86.317647   \n",
-       " 1                18000.0                          86.577778   \n",
-       " 2                19000.0                          86.794737   \n",
-       " 3                20000.0                          87.030000   \n",
-       " 4                21000.0                          87.266667   \n",
-       " ..                   ...                                ...   \n",
-       " 95              112000.0                          84.234821   \n",
-       " 96              113000.0                          84.133628   \n",
-       " 97              114000.0                          84.052632   \n",
-       " 98              115000.0                          83.971304   \n",
-       " 99              116000.0                          83.881897   \n",
-       " \n",
-       "     Kappa Statistic (percent)  Kappa Temporal Statistic (percent)  \\\n",
-       " 0                   71.151605                            7.293743   \n",
-       " 1                   71.304855                           13.929462   \n",
-       " 2                   71.387396                           18.855110   \n",
-       " 3                   71.509604                           22.935235   \n",
-       " 4                   71.645880                           26.538462   \n",
-       " ..                        ...                                 ...   \n",
-       " 95                  76.055835                           66.396422   \n",
-       " 96                  75.870843                           66.291269   \n",
-       " 97                  75.714576                           66.224501   \n",
-       " 98                  75.552421                           66.136973   \n",
-       " 99                  75.376769                           66.039415   \n",
-       " \n",
-       "     Kappa M Statistic (percent)  \n",
-       " 0                     64.187837  \n",
-       " 1                     63.772680  \n",
-       " 2                     63.388297  \n",
-       " 3                     63.053696  \n",
-       " 4                     62.799110  \n",
-       " ..                          ...  \n",
-       " 95                    68.073411  \n",
-       " 96                    67.855350  \n",
-       " 97                    67.669079  \n",
-       " 98                    67.474238  \n",
-       " 99                    67.257412  \n",
-       " \n",
-       " [100 rows x 5 columns])"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
-    "\n",
     "from moa.classifiers.meta import AdaptiveRandomForest\n",
     "from moa.core import Example\n",
     "from moa.evaluation import BasicClassificationPerformanceEvaluator\n",
@@ -496,8 +74,8 @@
     "rtg_2abrupt = ArffFileStream(\"/Users/gomeshe/Desktop/data/RTG_2abrupt.arff\", -1)\n",
     "rtg_2abrupt.prepareForUse()\n",
     "\n",
-    "# Updated this one. \n",
-    "test_train_loop_MOA(rtg_2abrupt, arf10, maxInstances=100000, sampleFrequency=1000)"
+    "acc, wallclock, cpu_time, df = test_train_loop_MOA(rtg_2abrupt, arf10, maxInstances=100000, sampleFrequency=100000)\n",
+    "print(f\"{arf10.getClass().getName()}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
    ]
   },
   {
@@ -521,23 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e3dda62f-23b1-40f4-8dc8-913215fded24",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Learner:  ARFClassifier  Result:  (0.79017, 379)\n",
-      "CPU times: user 6min 17s, sys: 8.05 s, total: 6min 25s\n",
-      "Wall time: 6min 21s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%time\n",
     "from river.forest import ARFClassifier\n",
+    "import pandas as pd\n",
     "\n",
     "rtg_2abrupt_path = '/Users/gomeshe/Desktop/data/RTG_2abrupt.csv'\n",
     "\n",
@@ -548,8 +116,8 @@
     "\n",
     "river_rtg_2abrupt = pd.read_csv(rtg_2abrupt_path).to_numpy()\n",
     "\n",
-    "result = run_experiment(river_arf10, river_rtg_2abrupt)\n",
-    "print('Learner: ', river_arf10, ' Result: ', result)"
+    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(river_arf10, river_rtg_2abrupt, maxInstances=100000, sampleFrequency=100000)\n",
+    "print(f\"{river_arf10}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
    ]
   },
   {
@@ -566,9 +134,13 @@
   {
    "cell_type": "markdown",
    "id": "172377ea-923e-455f-b3f1-7808ab327fc6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "## MOA ARF30"
+    "## MOA ARF30\n",
+    "\n",
+    "# MUST UPDATE THESE OTHER EXPERIMENTS AS WELL"
    ]
   },
   {
