updating examples and readme

--- a/MOA_API_Examples.ipynb
+++ b/MOA_API_Examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "be91302b-3d48-449a-9eeb-4444d86d8e7c",
    "metadata": {},
    "outputs": [
@@ -13,7 +13,7 @@
       "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/Using-MOA-API/moa.jar\n",
       "JVM Location (system): \n",
       "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
-      "Sucessfully started the JVM and added MOA jar to the class path\n"
+      "JVM already started\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "3d366b78-feeb-497a-8a05-578437600343",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "d56e186b-a288-4953-9d95-74f25cfeff5e",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ARFClassifier, 0.8670, 0.3444, 0.3445\n"
+      "ARFClassifier, 0.8410, 0.3747, 0.3741\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
     "    max_features=0.60\n",
     ")\n",
     "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(river_arf5, river_elec_tiny)\n",
+    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(dataset=river_elec_tiny, model=river_arf5)\n",
     "print(f\"{river_arf5}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
    ]
   },
@@ -136,7 +136,7 @@
     "\n",
     "river_knn = KNNClassifier()\n",
     "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(river_knn, river_elec_tiny)\n",
+    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(model=river_knn, dataset=river_elec_tiny)\n",
     "print(f\"{river_knn}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
    ]
   },
@@ -159,7 +159,7 @@
     "\n",
     "river_gnb = GaussianNB()\n",
     "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(river_gnb, river_elec_tiny)\n",
+    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(model=river_gnb, dataset=river_elec_tiny)\n",
     "print(f\"{river_gnb}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
    ]
   },
@@ -185,7 +185,7 @@
     "    subspace_size=0.6\n",
     ")\n",
     "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(river_srp, river_elec_tiny)\n",
+    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(model=river_srp, dataset=river_elec_tiny)\n",
     "print(f\"{river_srp}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
    ]
   },
@@ -199,7 +199,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ExtremelyFastDecisionTreeClassifier, 0.8230, 0.2255, 0.2264\n"
+      "ExtremelyFastDecisionTreeClassifier, 0.8230, 0.2525, 0.2427\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
     "\n",
     "river_EFDT = ExtremelyFastDecisionTreeClassifier()\n",
     "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(river_EFDT, river_elec_tiny)\n",
+    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(model=river_EFDT, dataset=river_elec_tiny)\n",
     "print(f\"{river_EFDT}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
    ]
   },
