--- a/MOA_Test_ClassificationEvaluator.ipynb
+++ b/MOA_Test_ClassificationEvaluator.ipynb
@@ -13,7 +13,11 @@
       "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/Using-MOA-API/moa.jar\n",
       "JVM Location (system): \n",
       "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
-      "Sucessfully started the JVM and added MOA jar to the class path\n"
+      "Sucessfully started the JVM and added MOA jar to the class path\n",
+      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/Using-MOA-API/moa.jar\n",
+      "JVM Location (system): \n",
+      "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
+      "JVM already started\n"
      ]
     }
    ],
@@ -22,7 +26,7 @@
     "import pandas as pd\n",
     "start_jpype()\n",
     "\n",
-    "from evaluation import *"
+    "from evaluation import ClassificationEvaluator, ClassificationWindowedEvaluator, Schema"
    ]
   },
   {
@@ -53,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error while trying to create the evaluator. Exception: Schema cannot be None, please define a schema.\n"
+      "Error while trying to create the evaluator. Exception: Schema is None, please define a proper Schema.\n"
      ]
     }
    ],
@@ -102,12 +106,12 @@
     "evaluator.update(0, 1)\n",
     "evaluator.update(1, 1)\n",
     "\n",
-    "print(evaluator.measurements())\n",
-    "print(evaluator.results())\n",
+    "print(evaluator.metrics_header())\n",
+    "print(evaluator.metrics())\n",
     "print(evaluator.accuracy())\n",
     "print(evaluator.kappa())\n",
-    "print(evaluator.kappaT())\n",
-    "print(evaluator.kappaM())"
+    "print(evaluator.kappa_temporal())\n",
+    "print(evaluator.kappa_M())"
    ]
   },
   {
@@ -146,8 +150,8 @@
     "evaluator.update(2, 2)\n",
     "evaluator.update(2, 0)\n",
     "\n",
-    "print(evaluator.measurements())\n",
-    "print(evaluator.results())"
+    "print(evaluator.metrics_header())\n",
+    "print(evaluator.metrics())"
    ]
   },
   {
@@ -184,9 +188,8 @@
     "evaluator.update(\"one\", \"one\")\n",
     "evaluator.update(\"two\", \"one\")\n",
     "\n",
-    "print(evaluator.measurements())\n",
-    "\n",
-    "print(evaluator.results())"
+    "print(evaluator.metrics_header())\n",
+    "print(evaluator.metrics())"
    ]
   },
   {
@@ -225,9 +228,9 @@
     "evaluator.update(\"plane\", \"plane\")\n",
     "evaluator.update(\"apple\", \"apple\")\n",
     "\n",
-    "print(evaluator.measurements())\n",
+    "print(evaluator.metrics_header())\n",
     "\n",
-    "print(evaluator.results())"
+    "print(evaluator.metrics())"
    ]
   },
   {
@@ -264,9 +267,9 @@
     "evaluator.update(2, 2)\n",
     "evaluator.update(1, 1)\n",
     "\n",
-    "print(evaluator.measurements())\n",
+    "print(evaluator.metrics_header())\n",
     "\n",
-    "print(evaluator.results())"
+    "print(evaluator.metrics())"
    ]
   },
   {
@@ -303,9 +306,9 @@
     "evaluator.update(3, 3)\n",
     "evaluator.update(1, 1)\n",
     "\n",
-    "print(evaluator.measurements())\n",
+    "print(evaluator.metrics_header())\n",
     "\n",
-    "print(evaluator.results())"
+    "print(evaluator.metrics())"
    ]
   },
   {
@@ -346,9 +349,9 @@
     "evaluator.update(3, 1) # Expecting to use a index, but the value of a index match a value, then it is interpreted as a value... \n",
     "evaluator.update(1, 1) # Same here... perhaps y=1 means value 1, while y_pred=1 was meant to be index=1. \n",
     "\n",
-    "print(evaluator.measurements())\n",
+    "print(evaluator.metrics_header())\n",
     "\n",
-    "print(evaluator.results())"
+    "print(evaluator.metrics())"
    ]
   },
   {
@@ -385,8 +388,8 @@
     "\n",
     "schema = Schema(moa_header=rtg.getHeader())\n",
     "\n",
-    "print(schema.getLabelIndexes())\n",
-    "print(schema.getLabelValues())"
+    "print(schema.get_label_indexes())\n",
+    "print(schema.get_label_values())"
    ]
   },
   {
@@ -409,7 +412,7 @@
      "output_type": "stream",
      "text": [
       "['classified instances', 'classifications correct (percent)', 'Kappa Statistic (percent)', 'Kappa Temporal Statistic (percent)', 'Kappa M Statistic (percent)', 'Recall for class 0 (percent)', 'Recall for class 1 (percent)', 'Recall for class 2 (percent)']\n",
-      "[10.0, 10.0, -50.000000000000014, -80.0, -50.000000000000014, 0.0, 25.0, 0.0]\n",
+      "[10.0, 10.0, -32.35294117647059, -80.0, -50.000000000000014, 0.0, 25.0, 0.0]\n",
       "10.0\n"
      ]
     }
@@ -429,8 +432,8 @@
     "evaluator.update(2, None)\n",
     "evaluator.update(0, None)\n",
     "\n",
-    "print(evaluator.measurements())\n",
-    "print(evaluator.results())\n",
+    "print(evaluator.metrics_header())\n",
+    "print(evaluator.metrics())\n",
     "print(evaluator.accuracy())"
    ]
   },
@@ -569,9 +572,9 @@
     "evaluator.update(0, 0)\n",
     "\n",
     "\n",
-    "print(evaluator.measurements())\n",
-    "print(evaluator.results())\n",
-    "evaluator.windowed_results()"
+    "print(evaluator.metrics_header())\n",
+    "print(evaluator.metrics())\n",
+    "evaluator.metrics_per_window()"
    ]
   },
   {
@@ -875,204 +878,12 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>classified instances</th>\n",
-       "      <th>classifications correct (percent)</th>\n",
-       "      <th>Kappa Statistic (percent)</th>\n",
-       "      <th>Kappa Temporal Statistic (percent)</th>\n",
-       "      <th>Kappa M Statistic (percent)</th>\n",
-       "      <th>Recall for class 0 (percent)</th>\n",
-       "      <th>Recall for class 1 (percent)</th>\n",
-       "      <th>Recall for class 2 (percent)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>80.400000</td>\n",
-       "      <td>65.084048</td>\n",
-       "      <td>65.614035</td>\n",
-       "      <td>58.995816</td>\n",
-       "      <td>90.891473</td>\n",
-       "      <td>81.868132</td>\n",
-       "      <td>30.833333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>83.050000</td>\n",
-       "      <td>70.631094</td>\n",
-       "      <td>70.926244</td>\n",
-       "      <td>66.235060</td>\n",
-       "      <td>91.111111</td>\n",
-       "      <td>86.351706</td>\n",
-       "      <td>40.725806</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3000.0</td>\n",
-       "      <td>86.200000</td>\n",
-       "      <td>76.072836</td>\n",
-       "      <td>76.138329</td>\n",
-       "      <td>72.691293</td>\n",
-       "      <td>92.760487</td>\n",
-       "      <td>90.557940</td>\n",
-       "      <td>44.817927</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4000.0</td>\n",
-       "      <td>87.875000</td>\n",
-       "      <td>79.074292</td>\n",
-       "      <td>79.273504</td>\n",
-       "      <td>75.906607</td>\n",
-       "      <td>93.437658</td>\n",
-       "      <td>92.302674</td>\n",
-       "      <td>51.234568</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5000.0</td>\n",
-       "      <td>88.860000</td>\n",
-       "      <td>80.862418</td>\n",
-       "      <td>81.105834</td>\n",
-       "      <td>77.861685</td>\n",
-       "      <td>93.946731</td>\n",
-       "      <td>93.022036</td>\n",
-       "      <td>55.519481</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6000.0</td>\n",
-       "      <td>89.633333</td>\n",
-       "      <td>82.262531</td>\n",
-       "      <td>82.528090</td>\n",
-       "      <td>79.599869</td>\n",
-       "      <td>94.295416</td>\n",
-       "      <td>93.771626</td>\n",
-       "      <td>58.277254</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7000.0</td>\n",
-       "      <td>90.242857</td>\n",
-       "      <td>83.349126</td>\n",
-       "      <td>83.585677</td>\n",
-       "      <td>80.884411</td>\n",
-       "      <td>94.504531</td>\n",
-       "      <td>94.350074</td>\n",
-       "      <td>60.734788</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8000.0</td>\n",
-       "      <td>90.675000</td>\n",
-       "      <td>84.135309</td>\n",
-       "      <td>84.354027</td>\n",
-       "      <td>81.738066</td>\n",
-       "      <td>94.755692</td>\n",
-       "      <td>94.764228</td>\n",
-       "      <td>62.598425</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9000.0</td>\n",
-       "      <td>90.944444</td>\n",
-       "      <td>84.623638</td>\n",
-       "      <td>84.791939</td>\n",
-       "      <td>82.255606</td>\n",
-       "      <td>94.910248</td>\n",
-       "      <td>94.918699</td>\n",
-       "      <td>63.982684</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10000.0</td>\n",
-       "      <td>91.160000</td>\n",
-       "      <td>85.010699</td>\n",
-       "      <td>85.170273</td>\n",
-       "      <td>82.615536</td>\n",
-       "      <td>94.785089</td>\n",
-       "      <td>95.129015</td>\n",
-       "      <td>65.738592</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   classified instances  classifications correct (percent)  \\\n",
-       "0                1000.0                          80.400000   \n",
-       "1                2000.0                          83.050000   \n",
-       "2                3000.0                          86.200000   \n",
-       "3                4000.0                          87.875000   \n",
-       "4                5000.0                          88.860000   \n",
-       "5                6000.0                          89.633333   \n",
-       "6                7000.0                          90.242857   \n",
-       "7                8000.0                          90.675000   \n",
-       "8                9000.0                          90.944444   \n",
-       "9               10000.0                          91.160000   \n",
-       "\n",
-       "   Kappa Statistic (percent)  Kappa Temporal Statistic (percent)  \\\n",
-       "0                  65.084048                           65.614035   \n",
-       "1                  70.631094                           70.926244   \n",
-       "2                  76.072836                           76.138329   \n",
-       "3                  79.074292                           79.273504   \n",
-       "4                  80.862418                           81.105834   \n",
-       "5                  82.262531                           82.528090   \n",
-       "6                  83.349126                           83.585677   \n",
-       "7                  84.135309                           84.354027   \n",
-       "8                  84.623638                           84.791939   \n",
-       "9                  85.010699                           85.170273   \n",
-       "\n",
-       "   Kappa M Statistic (percent)  Recall for class 0 (percent)  \\\n",
-       "0                    58.995816                     90.891473   \n",
-       "1                    66.235060                     91.111111   \n",
-       "2                    72.691293                     92.760487   \n",
-       "3                    75.906607                     93.437658   \n",
-       "4                    77.861685                     93.946731   \n",
-       "5                    79.599869                     94.295416   \n",
-       "6                    80.884411                     94.504531   \n",
-       "7                    81.738066                     94.755692   \n",
-       "8                    82.255606                     94.910248   \n",
-       "9                    82.615536                     94.785089   \n",
-       "\n",
-       "   Recall for class 1 (percent)  Recall for class 2 (percent)  \n",
-       "0                     81.868132                     30.833333  \n",
-       "1                     86.351706                     40.725806  \n",
-       "2                     90.557940                     44.817927  \n",
-       "3                     92.302674                     51.234568  \n",
-       "4                     93.022036                     55.519481  \n",
-       "5                     93.771626                     58.277254  \n",
-       "6                     94.350074                     60.734788  \n",
-       "7                     94.764228                     62.598425  \n",
-       "8                     94.918699                     63.982684  \n",
-       "9                     95.129015                     65.738592  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['classified instances', 'classifications correct (percent)', 'Kappa Statistic (percent)', 'Kappa Temporal Statistic (percent)', 'Kappa M Statistic (percent)', 'Recall for class 0 (percent)', 'Recall for class 1 (percent)', 'Recall for class 2 (percent)']\n",
+      "[10000.0, 91.16, 85.0106988680263, 85.170273444053, 82.61553588987218, 94.78508861275209, 95.12901527119536, 65.73859242072699]\n"
+     ]
     }
    ],
    "source": [
@@ -1098,12 +909,11 @@
     "rtg.prepareForUse()\n",
     "\n",
     "# Creating the schema\n",
-    "schema = Schema(labels=[0,1,2])\n",
-    "# schema = Schema(moa_header=rtg.getHeader())\n",
+    "schema = Schema(moa_header=rtg.getHeader())\n",
     "# Setting parameters using the option attribute directly\n",
     "evaluator = ClassificationEvaluator(schema=schema, recall_per_class=True)\n",
     "\n",
-    "learner.setModelContext(rtg.getHeader())\n",
+    "# learner.setModelContext(rtg.getHeader())\n",
     "\n",
     "# Create empty lists to store the data\n",
     "data = []\n",
@@ -1118,42 +928,12 @@
     "\n",
     "    evaluator.update(testInst.getData().classValue(), Utils.maxIndex(prediction))\n",
     "    learner.trainOnInstance(trainInst)\n",
-    "\n",
-    "    if instancesProcessed == 1:\n",
-    "        performance_names = evaluator.measurements()\n",
-    "\n",
-    "    if instancesProcessed % sampleFrequency == 0:\n",
-    "        performance_values = evaluator.results()\n",
-    "        data.append(performance_values)\n",
     "    \n",
     "    instancesProcessed += 1\n",
     "\n",
     "# Create a DataFrame using collected data\n",
-    "results_df = pd.DataFrame(data, columns=performance_names)\n",
-    "\n",
-    "# Print the DataFrame\n",
-    "results_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "944c182f-7123-4d5d-8132-50d81cc8e165",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "91.16"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "evaluator.accuracy()"
+    "print(evaluator.metrics_header())\n",
+    "print(evaluator.metrics())"
    ]
   },
   {
@@ -1167,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "e2e98a8c-acff-480c-9c1d-f21262bc5cfa",
    "metadata": {},
    "outputs": [
@@ -1186,7 +966,7 @@
        "2.0   146    17  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,10 +1024,10 @@
     "    instancesProcessed += 1\n",
     "\n",
     "    if instancesProcessed == 1:\n",
-    "        performance_names = evaluator.measurements()\n",
+    "        performance_names = evaluator.metrics_header()\n",
     "\n",
     "    if instancesProcessed % sampleFrequency == 0:\n",
-    "        performance_values = evaluator.results()\n",
+    "        performance_values = evaluator.metrics()\n",
     "        data.append(performance_values)\n",
     "\n",
     "print(f\"{model}, accuracy.get(): {accuracy.get():.6f}, evaluator.accuracy(): {evaluator.accuracy():.4f}\")\n",
