Several updates to evaluation (adding prequential and other changes)

--- a/MOA_Simple_Example.ipynb
+++ b/MOA_Simple_Example.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1e7fe1d7-21c6-40f7-b829-212a98889c83",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
        "0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "712b607a-a9ef-4441-a212-6f86e0af75c5",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "61592628-0cd0-4b43-9e37-4fac3fb8ad03",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "def73fba-7f72-4168-b621-1fc4b7c12a66",
    "metadata": {},
    "outputs": [
@@ -87,8 +87,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 458 ms, sys: 9.21 ms, total: 467 ms\n",
-      "Wall time: 238 ms\n"
+      "CPU times: user 2.63 s, sys: 1.81 s, total: 4.44 s\n",
+      "Wall time: 1.2 s\n"
      ]
     },
     {
@@ -287,7 +287,7 @@
        "9                     89.010989                     35.833333  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
