--- a/MOA_Test_ClassificationEvaluator.ipynb
+++ b/MOA_Test_ClassificationEvaluator.ipynb
@@ -13,11 +13,7 @@
       "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/Using-MOA-API/moa.jar\n",
       "JVM Location (system): \n",
       "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
-      "Sucessfully started the JVM and added MOA jar to the class path\n",
-      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/Using-MOA-API/moa.jar\n",
-      "JVM Location (system): \n",
-      "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
-      "JVM already started\n"
+      "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
     }
    ],
@@ -224,7 +220,7 @@
     "evaluator = ClassificationEvaluator(schema=schema, f1_per_class=True)\n",
     "\n",
     "evaluator.update(\"plane\", \"banana\")\n",
-    "evaluator.update(\"banana\", 0) ## This\n",
+    "evaluator.update(\"banana\", 0) ## y=\"banana\" and y_pred= index 0, surprisingly this works. \n",
     "evaluator.update(\"plane\", \"plane\")\n",
     "evaluator.update(\"apple\", \"apple\")\n",
     "\n",
@@ -412,7 +408,7 @@
      "output_type": "stream",
      "text": [
       "['classified instances', 'classifications correct (percent)', 'Kappa Statistic (percent)', 'Kappa Temporal Statistic (percent)', 'Kappa M Statistic (percent)', 'Recall for class 0 (percent)', 'Recall for class 1 (percent)', 'Recall for class 2 (percent)']\n",
-      "[10.0, 10.0, -32.35294117647059, -80.0, -50.000000000000014, 0.0, 25.0, 0.0]\n",
+      "[10.0, 10.0, -28.57142857142858, -80.0, -50.000000000000014, 0.0, 25.0, 0.0]\n",
       "10.0\n"
      ]
     }
