Updating all the notebooks with examples and solving a few bugs.

--- a/Basic_Classification_Examples.ipynb
+++ b/Basic_Classification_Examples.ipynb
@@ -1,8 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "326748ef-630d-42ce-9815-1e08035d82fd",
+   "metadata": {},
+   "source": [
+    "# Basic classification examples\n",
+    "\n",
+    "* Using the ```test_then_train_evaluation``` and ```test_then_train_RIVER``` helper functions.\n",
+    "* These are just examples on how to run several algorithms, it is kind of repetitive, but might be useful to have an example.\n",
+    "* We show how to use AdaptiveRandomForest using its wrapper (```from ensembles import AdaptiveRandomForest```) and how to create MOA learners and wrap them using a MOALearner (```from MOALearners import MOAClassifier```).\n",
+    "* Examples from MOA and River use the same CSV file.\n",
+    "\n",
+    "**Notebook last update: 27/09/2023**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "be91302b-3d48-449a-9eeb-4444d86d8e7c",
    "metadata": {},
    "outputs": [
@@ -13,7 +28,7 @@
       "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/Using-MOA-API/moa.jar\n",
       "JVM Location (system): \n",
       "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
-      "JVM already started\n"
+      "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
     }
    ],
@@ -21,7 +36,8 @@
     "from prepare_jpype import start_jpype\n",
     "start_jpype()\n",
     "\n",
-    "from evaluation import test_train_loop_MOA, test_train_loop_RIVER"
+    "from evaluation import test_then_train_evaluation\n",
+    "from benchmarking import test_then_train_RIVER"
    ]
   },
   {
@@ -32,20 +48,7 @@
    "outputs": [],
    "source": [
     "## Datasets paths\n",
-    "csv_elec_tiny_path = '/Users/gomeshe/Desktop/data/electricity_tiny.csv'\n",
-    "arff_elec_tiny_path = '/Users/gomeshe/Desktop/data/electricity_tiny.arff'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "517c68a0-3951-4202-b3eb-0b648f0e33ba",
-   "metadata": {},
-   "source": [
-    "## Basic classification examples\n",
-    "\n",
-    "* Using the ```test_train_loop_MOA``` for MOA and ```test_train_loop_RIVER``` helper functions (see module test_train_loop)\n",
-    "\n",
-    "* These are just examples on how to run several algorithms, it is kind of repetitive, but might be useful to have an example. \n"
+    "csv_elec_tiny_path = '/Users/gomeshe/Desktop/data/electricity_tiny.csv'"
    ]
   },
   {
@@ -58,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "3d366b78-feeb-497a-8a05-578437600343",
    "metadata": {},
    "outputs": [],
@@ -70,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "d56e186b-a288-4953-9d95-74f25cfeff5e",
    "metadata": {},
    "outputs": [
@@ -78,7 +81,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ARFClassifier, 0.8410, 0.3747, 0.3741\n"
+      "ARFClassifier, 0.8410, 0.3540, 0.3544\n"
      ]
     }
    ],
@@ -90,7 +93,7 @@
     "    max_features=0.60\n",
     ")\n",
     "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(dataset=river_elec_tiny, model=river_arf5)\n",
+    "acc, wallclock, cpu_time, df = test_then_train_RIVER(dataset=river_elec_tiny, model=river_arf5)\n",
     "print(f\"{river_arf5}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
    ]
   },
@@ -104,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HoeffdingTreeClassifier, 0.8230, 0.0372, 0.0379\n"
+      "HoeffdingTreeClassifier, 0.8230, 0.0397, 0.0404\n"
      ]
     }
    ],
@@ -113,7 +116,7 @@
     "\n",
     "river_ht = HoeffdingTreeClassifier()\n",
     "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(river_ht, river_elec_tiny)\n",
+    "acc, wallclock, cpu_time, df = test_then_train_RIVER(dataset=river_elec_tiny, model=river_ht)\n",
     "print(f\"{river_ht}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
    ]
   },
@@ -127,7 +130,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNNClassifier, 0.7560, 1.9004, 1.8937\n"
+      "KNNClassifier, 0.7560, 1.9672, 1.9677\n"
      ]
     }
    ],
@@ -136,7 +139,7 @@
     "\n",
     "river_knn = KNNClassifier()\n",
     "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(model=river_knn, dataset=river_elec_tiny)\n",
+    "acc, wallclock, cpu_time, df = test_then_train_RIVER(dataset=river_elec_tiny, model=river_knn)\n",
     "print(f\"{river_knn}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
    ]
   },
@@ -150,7 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GaussianNB, 0.8490, 0.0285, 0.0285\n"
+      "GaussianNB, 0.8490, 0.0322, 0.0359\n"
      ]
     }
    ],
@@ -159,7 +162,7 @@
     "\n",
     "river_gnb = GaussianNB()\n",
     "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(model=river_gnb, dataset=river_elec_tiny)\n",
+    "acc, wallclock, cpu_time, df = test_then_train_RIVER(dataset=river_elec_tiny, model=river_gnb)\n",
     "print(f\"{river_gnb}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
    ]
   },
@@ -173,7 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SRPClassifier(HoeffdingTreeClassifier), 0.8940, 0.7320, 0.7318\n"
+      "SRPClassifier(HoeffdingTreeClassifier), 0.8900, 0.7733, 0.7740\n"
      ]
     }
    ],
@@ -185,7 +188,7 @@
     "    subspace_size=0.6\n",
     ")\n",
     "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(model=river_srp, dataset=river_elec_tiny)\n",
+    "acc, wallclock, cpu_time, df = test_then_train_RIVER(dataset=river_elec_tiny, model=river_srp)\n",
     "print(f\"{river_srp}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
    ]
   },
@@ -199,7 +202,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ExtremelyFastDecisionTreeClassifier, 0.8230, 0.2525, 0.2427\n"
+      "ExtremelyFastDecisionTreeClassifier, 0.8230, 0.2309, 0.2314\n"
      ]
     }
    ],
@@ -208,7 +211,7 @@
     "\n",
     "river_EFDT = ExtremelyFastDecisionTreeClassifier()\n",
     "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_RIVER(model=river_EFDT, dataset=river_elec_tiny)\n",
+    "acc, wallclock, cpu_time, df = test_then_train_RIVER(dataset=river_elec_tiny, model=river_EFDT)\n",
     "print(f\"{river_EFDT}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
    ]
   },
@@ -223,14 +226,15 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "389f00c6-22e0-4ed6-a73a-7c18d01c3fb8",
+   "id": "af49a45b-767d-4532-bf39-f408d2ab515a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from moa.streams import ArffFileStream\n",
+    "# from moa.streams import ArffFileStream\n",
+    "from stream import stream_from_file\n",
+    "# from evaluation import test_then_train_evaluation\n",
     "\n",
-    "elec_tiny_arff = ArffFileStream(arff_elec_tiny_path, -1)\n",
-    "elec_tiny_arff.prepareForUse()"
+    "elec_stream = stream_from_file(path_to_csv_or_arff=csv_elec_tiny_path, class_index=-1)"
    ]
   },
   {
@@ -243,21 +247,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moa.classifiers.meta.AdaptiveRandomForest, 89.4500, 0.3876, 1.1303\n"
+      "AdaptiveRandomForest wallclock: 0.46613097190856934 cpu_time: 0.9091550000000002 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 89.45, 'Kappa Statistic (percent)': 78.10294728102947, 'Kappa Temporal Statistic (percent)': 24.9110320284697, 'Kappa M Statistic (percent)': 73.2233502538071}\n"
      ]
     }
    ],
    "source": [
-    "from moa.classifiers.meta import AdaptiveRandomForest\n",
+    "from ensembles import AdaptiveRandomForest\n",
     "\n",
-    "arf10 = AdaptiveRandomForest()\n",
-    "arf10.getOptions().setViaCLIString(\"-s 5\")\n",
-    "arf10.prepareForUse()\n",
+    "arf10 = AdaptiveRandomForest(schema=elec_stream.get_schema(), ensemble_size=5)\n",
+    "results = test_then_train_evaluation(stream=elec_stream, learner=arf10)\n",
     "\n",
-    "elec_tiny_arff.restart()\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_MOA(elec_tiny_arff, arf10, maxInstances=2000, sampleFrequency=2000)\n",
-    "print(f\"{arf10.getClass().getName()}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
+    "print(f\"{arf10} wallclock: {results['wallclock']} cpu_time: {results['cpu_time']} metrics: {results['cumulative']}\")"
    ]
   },
   {
@@ -270,20 +270,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moa.classifiers.trees.HoeffdingTree, 86.0500, 0.0282, 0.0883\n"
+      "HoeffdingTree wallclock: 0.04388594627380371 cpu_time: 0.08845100000000095 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 82.65, 'Kappa Statistic (percent)': 64.11315010011087, 'Kappa Temporal Statistic (percent)': -23.487544483985793, 'Kappa M Statistic (percent)': 55.964467005076145}\n"
      ]
     }
    ],
    "source": [
     "from moa.classifiers.trees import HoeffdingTree\n",
+    "from MOALearners import MOAClassifier\n",
     "\n",
-    "ht_moa = HoeffdingTree()\n",
-    "ht_moa.prepareForUse()\n",
+    "ht_moa = MOAClassifier(moa_learner=HoeffdingTree())\n",
     "\n",
-    "elec_tiny_arff.restart()\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_MOA(elec_tiny_arff, ht_moa, maxInstances=2000, sampleFrequency=2000)\n",
-    "print(f\"{ht_moa.getClass().getName()}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
+    "results = test_then_train_evaluation(stream=elec_stream, learner=ht_moa)\n",
+    "print(f\"{ht_moa} wallclock: {results['wallclock']} cpu_time: {results['cpu_time']} metrics: {results['cumulative']}\")"
    ]
   },
   {
@@ -296,20 +294,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moa.classifiers.lazy.kNN, 84.2167, 0.1976, 0.5912\n"
+      "kNN wallclock: 0.16757774353027344 cpu_time: 0.3459479999999999 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 80.55, 'Kappa Statistic (percent)': 59.525712097754244, 'Kappa Temporal Statistic (percent)': -38.43416370106766, 'Kappa M Statistic (percent)': 50.63451776649747}\n"
      ]
     }
    ],
    "source": [
     "from moa.classifiers.lazy import kNN\n",
     "\n",
-    "knn_moa = kNN()\n",
-    "knn_moa.prepareForUse()\n",
+    "knn_moa = MOAClassifier(moa_learner=kNN())\n",
     "\n",
-    "elec_tiny_arff.restart()\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_MOA(elec_tiny_arff, knn_moa, maxInstances=2000, sampleFrequency=2000)\n",
-    "print(f\"{knn_moa.getClass().getName()}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
+    "results = test_then_train_evaluation(stream=elec_stream, learner=knn_moa)\n",
+    "print(f\"{knn_moa} wallclock: {results['wallclock']} cpu_time: {results['cpu_time']} metrics: {results['cumulative']}\")"
    ]
   },
   {
@@ -322,20 +317,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moa.classifiers.trees.EFDT, 83.8375, 0.0246, 0.0775\n"
+      "EFDT wallclock: 0.045812129974365234 cpu_time: 0.09315900000000177 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 82.69999999999999, 'Kappa Statistic (percent)': 64.22426628726465, 'Kappa Temporal Statistic (percent)': -23.131672597864835, 'Kappa M Statistic (percent)': 56.09137055837563}\n"
      ]
     }
    ],
    "source": [
     "from moa.classifiers.trees import EFDT\n",
     "\n",
-    "EFDT_moa = EFDT()\n",
-    "EFDT_moa.prepareForUse()\n",
+    "EFDT_moa = MOAClassifier(moa_learner=EFDT())\n",
     "\n",
-    "elec_tiny_arff.restart()\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_MOA(elec_tiny_arff, EFDT_moa, maxInstances=2000, sampleFrequency=2000)\n",
-    "print(f\"{EFDT_moa.getClass().getName()}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
+    "results = test_then_train_evaluation(stream=elec_stream, learner=EFDT_moa)\n",
+    "print(f\"{EFDT_moa} wallclock: {results['wallclock']} cpu_time: {results['cpu_time']} metrics: {results['cumulative']}\")"
    ]
   },
   {
@@ -348,20 +340,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moa.classifiers.bayes.NaiveBayes, 83.8700, 0.0181, 0.0508\n"
+      "NaiveBayes wallclock: 0.03906869888305664 cpu_time: 0.07884200000000163 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 84.0, 'Kappa Statistic (percent)': 66.56748353448563, 'Kappa Temporal Statistic (percent)': -13.879003558718917, 'Kappa M Statistic (percent)': 59.39086294416243}\n"
      ]
     }
    ],
    "source": [
     "from moa.classifiers.bayes import NaiveBayes\n",
     "\n",
-    "NaiveBayes_moa = NaiveBayes()\n",
-    "NaiveBayes_moa.prepareForUse()\n",
+    "NaiveBayes_moa = MOAClassifier(moa_learner=NaiveBayes())\n",
     "\n",
-    "elec_tiny_arff.restart()\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_MOA(elec_tiny_arff, NaiveBayes_moa, maxInstances=2000, sampleFrequency=2000)\n",
-    "print(f\"{NaiveBayes_moa.getClass().getName()}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
+    "results = test_then_train_evaluation(stream=elec_stream, learner=NaiveBayes_moa)\n",
+    "print(f\"{NaiveBayes_moa} wallclock: {results['wallclock']} cpu_time: {results['cpu_time']} metrics: {results['cumulative']}\")"
    ]
   },
   {
@@ -374,22 +363,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moa.classifiers.meta.StreamingRandomPatches, 84.9417, 0.4210, 1.1560\n"
+      "StreamingRandomPatches wallclock: 0.2898409366607666 cpu_time: 0.5924649999999989 metrics: {'classified instances': 2000.0, 'classifications correct (percent)': 88.75, 'Kappa Statistic (percent)': 76.35402128768642, 'Kappa Temporal Statistic (percent)': 19.928825622775744, 'Kappa M Statistic (percent)': 71.4467005076142}\n"
      ]
     }
    ],
    "source": [
     "from moa.classifiers.meta import StreamingRandomPatches\n",
     "\n",
-    "SRP_moa = StreamingRandomPatches()\n",
-    "SRP_moa.getOptions().setViaCLIString(\"-s 10\")\n",
-    "SRP_moa.prepareForUse()\n",
+    "SRP_moa = MOAClassifier(moa_learner=StreamingRandomPatches(), CLI=\"-s 5 -u\")\n",
     "\n",
-    "elec_tiny_arff.restart()\n",
-    "\n",
-    "acc, wallclock, cpu_time, df = test_train_loop_MOA(elec_tiny_arff, SRP_moa, maxInstances=2000, sampleFrequency=2000)\n",
-    "print(f\"{SRP_moa.getClass().getName()}, {acc:.4f}, {wallclock:.4f}, {cpu_time:.4f}\")"
+    "results = test_then_train_evaluation(stream=elec_stream, learner=SRP_moa)\n",
+    "print(f\"{SRP_moa} wallclock: {results['wallclock']} cpu_time: {results['cpu_time']} metrics: {results['cumulative']}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0398af58-2267-4a10-8a75-d2ed3d99099f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
