--- a/Classification_Evaluator_Examples.ipynb
+++ b/Classification_Evaluator_Examples.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4b40b5a3-2217-4ef4-9daa-8c33a82a8f31",
+   "metadata": {},
+   "source": [
+    "# Testing the ```Classification Evaluators``` classes\n",
+    "* ```ClassificationEvaluator``` and ```ClassificationWindowedEvaluator```\n",
+    "* This notebook also includes **integration examples showing how to use ```MOA``` and ```River```** with these evaluators \n",
+    "\n",
+    "**Notebook last update: 27/09/2023**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "f6c3fc32-efa6-4238-a6f6-7e84aed4973d",
@@ -23,14 +35,6 @@
     "start_jpype()\n",
     "\n",
     "from evaluation import ClassificationEvaluator, ClassificationWindowedEvaluator, Schema"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d47c0cf9-b46b-41c8-a8aa-cdea353839b4",
-   "metadata": {},
-   "source": [
-    "# Testing the ClassificationEvaluator classes\n"
    ]
   },
   {
@@ -575,6 +579,125 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7ec076e8-7e7d-4029-b983-ed5ee0de35a6",
+   "metadata": {},
+   "source": [
+    "## **IMPORTANT**: Window size does not perfectly divides the number os instances processed\n",
+    "\n",
+    "* In these cases, the user wanting to use ```ClassificationWindowedEvaluator``` directly must know that the results for the last window (which is smaller than ```window_size```) are available through the ```metrics()```, i.e. the last results observed for the stream.\n",
+    "* If the user is using ```windowed_evaluation``` or ```prequential_evaluation``` (and variants) the user does not need to worry about this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "73b739b9-60dc-4975-afb9-5d74e8abad99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['classified instances', 'classifications correct (percent)', 'Kappa Statistic (percent)', 'Kappa Temporal Statistic (percent)', 'Kappa M Statistic (percent)']\n",
+      "[12.0, 60.0, 28.57142857142856, -100.00000000000007, 0.0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>classified instances</th>\n",
+       "      <th>classifications correct (percent)</th>\n",
+       "      <th>Kappa Statistic (percent)</th>\n",
+       "      <th>Kappa Temporal Statistic (percent)</th>\n",
+       "      <th>Kappa M Statistic (percent)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>-25.0</td>\n",
+       "      <td>33.333333</td>\n",
+       "      <td>-100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   classified instances  classifications correct (percent)  \\\n",
+       "0                   5.0                               60.0   \n",
+       "1                  10.0                               80.0   \n",
+       "\n",
+       "   Kappa Statistic (percent)  Kappa Temporal Statistic (percent)  \\\n",
+       "0                      -25.0                           33.333333   \n",
+       "1                        0.0                            0.000000   \n",
+       "\n",
+       "   Kappa M Statistic (percent)  \n",
+       "0                       -100.0  \n",
+       "1                          0.0  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "schema = Schema(labels=[0,1])\n",
+    "evaluator = ClassificationWindowedEvaluator(schema=schema, window_size=5)\n",
+    "\n",
+    "evaluator.update(1, 0)\n",
+    "evaluator.update(1, 1)\n",
+    "evaluator.update(0, 1)\n",
+    "\n",
+    "evaluator.update(1, 1)\n",
+    "evaluator.update(1, 1)\n",
+    "evaluator.update(1, 1)\n",
+    "\n",
+    "evaluator.update(1, 1)\n",
+    "evaluator.update(1, 1)\n",
+    "evaluator.update(1, 1)\n",
+    "\n",
+    "evaluator.update(0, 1)\n",
+    "evaluator.update(0, 1)\n",
+    "evaluator.update(0, 0)\n",
+    "\n",
+    "\n",
+    "print(evaluator.metrics_header())\n",
+    "print(evaluator.metrics()) # Results for the last window.\n",
+    "evaluator.metrics_per_window()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5fe53bb2-d894-456c-9977-d7f59f467f4b",
    "metadata": {},
    "source": [
@@ -594,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "eb7c4331-b390-423d-b645-3cbae4752950",
    "metadata": {},
    "outputs": [
@@ -794,7 +917,7 @@
        "9                     95.129015                     65.738592  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "9f202299-317d-45db-a62d-747769a958a8",
    "metadata": {},
    "outputs": [
@@ -943,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "e2e98a8c-acff-480c-9c1d-f21262bc5cfa",
    "metadata": {},
    "outputs": [
@@ -962,7 +1085,7 @@
        "2.0   146    17  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
