--- a/Using_jpype_MOA_example.ipynb
+++ b/Using_jpype_MOA_example.ipynb
@@ -5,10 +5,12 @@
    "id": "69c6e33e-88ee-4366-8830-9305c2dc182c",
    "metadata": {},
    "source": [
-    "## Using jpype directly\n",
+    "# Using jpype directly\n",
     "\n",
     "* This notebook does not use the prepare_jpype.py script\n",
-    "* It servers as an example of how to use jpype directly (it is easy, but it is good to have this example around). "
+    "* It servers as an example of how to use jpype directly (it is easy, but it is good to have this example around).\n",
+    "\n",
+    "**Notebook last update: 27/09/2023**"
    ]
   },
   {
@@ -87,8 +89,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.63 s, sys: 1.81 s, total: 4.44 s\n",
-      "Wall time: 1.2 s\n"
+      "CPU times: user 2.47 s, sys: 1.9 s, total: 4.38 s\n",
+      "Wall time: 1.07 s\n"
      ]
     },
     {
