lots of changes, should have made several commits, but it is what it is...

--- a/Basic_Classification_Examples.ipynb
+++ b/Basic_Classification_Examples.ipynb
@@ -42,13 +42,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "60bb1d0d-66e3-45f1-b7cc-15ae08cbe81a",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Datasets paths\n",
-    "csv_elec_tiny_path = '/Users/gomeshe/Desktop/data/electricity_tiny.csv'"
+    "csv_elec_tiny_path = '/Users/gomeshe/Desktop/data/electricity_tiny.csv'\n",
+    "\n",
+    "csv_elec_tiny_path = 'electricity_nuwan.csv'"
    ]
   },
   {
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3d366b78-feeb-497a-8a05-578437600343",
    "metadata": {},
    "outputs": [],
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d56e186b-a288-4953-9d95-74f25cfeff5e",
    "metadata": {},
    "outputs": [
@@ -81,7 +83,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ARFClassifier, 0.8410, 0.3540, 0.3544\n"
+      "ARFClassifier, 0.8600, 0.4573, 0.4531\n"
      ]
     }
    ],
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0d9c9d33-52b2-4442-a577-396de0bf31e7",
    "metadata": {},
    "outputs": [
@@ -107,7 +109,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HoeffdingTreeClassifier, 0.8230, 0.0397, 0.0404\n"
+      "HoeffdingTreeClassifier, 0.8630, 0.0703, 0.0681\n"
      ]
     }
    ],
@@ -122,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "84f29ddd-2e97-4c31-945a-1129e8ca1833",
    "metadata": {},
    "outputs": [
@@ -130,7 +132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNNClassifier, 0.7560, 1.9672, 1.9677\n"
+      "KNNClassifier, 0.7620, 1.9057, 1.8971\n"
      ]
     }
    ],
@@ -176,7 +178,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SRPClassifier(HoeffdingTreeClassifier), 0.8900, 0.7733, 0.7740\n"
+      "SRPClassifier(HoeffdingTreeClassifier), 0.9170, 0.8618, 0.8561\n"
      ]
     }
    ],
@@ -202,7 +204,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ExtremelyFastDecisionTreeClassifier, 0.8230, 0.2309, 0.2314\n"
+      "ExtremelyFastDecisionTreeClassifier, 0.8630, 0.3784, 0.3530\n"
      ]
     }
    ],
@@ -228,13 +230,43 @@
    "execution_count": 10,
    "id": "af49a45b-767d-4532-bf39-f408d2ab515a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/MOABridge/stream.py:161: RuntimeWarning: invalid value encountered in cast\n",
+      "  return NumpyStream(X=X, y=y.astype(int), dataset_name=\"Elec\", feature_names=header[:-1], target_name=header[-1], enforce_regression=enforce_regression)\n"
+     ]
+    }
+   ],
    "source": [
     "# from moa.streams import ArffFileStream\n",
     "from stream import stream_from_file\n",
     "# from evaluation import test_then_train_evaluation\n",
     "\n",
     "elec_stream = stream_from_file(path_to_csv_or_arff=csv_elec_tiny_path, class_index=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8b4a0ea7-8707-4bf3-8ce6-1f3a965497c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elec_stream.get_schema().label_values"
    ]
   },
   {
