--- a/Using_jpype_MOA_example.ipynb
+++ b/Using_jpype_MOA_example.ipynb
@@ -10,7 +10,7 @@
     "* This notebook does not use the prepare_jpype.py script\n",
     "* It servers as an example of how to use jpype directly (it is easy, but it is good to have this example around).\n",
     "\n",
-    "**Notebook last update: 27/09/2023**"
+    "**Notebook last update: 04/10/2023**"
    ]
   },
   {
@@ -57,7 +57,13 @@
     "from jpype.types import *\n",
     "\n",
     "# Starts the JVM\n",
-    "jpype.startJVM()"
+    "# jpype.startJVM()\n",
+    "\n",
+    "# Define JVM parameters\n",
+    "jvm_args = [\"-Xmx8g\", \"-Xss10M\"]\n",
+    "\n",
+    "# Start the JVM with the specified parameters\n",
+    "jpype.startJVM(jpype.getDefaultJVMPath(), *jvm_args)"
    ]
   },
   {
@@ -89,8 +95,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.47 s, sys: 1.9 s, total: 4.38 s\n",
-      "Wall time: 1.07 s\n"
+      "CPU times: user 2.53 s, sys: 1.92 s, total: 4.45 s\n",
+      "Wall time: 1.14 s\n"
      ]
     },
     {
